src/test/deca/codegen/valid/NotOk/testArithm.deca
{
    int a=8, b=7;
    float c=a+b-0.5;
    float d = 1.6, res;
    if (d==1.23) {
        println("NOT OK");
    }
    res = (a%b+b%a) * (c-14);
    res = res / d;
    if (res != 2.5) {
        println("NOT OK");
    }
}